# space_simulator

./: CMakeLists.txt  README.md  package.xml
launch/: space_simulator_gazebo.launch.py  space_simulator_ignition.launch.py
models/celestial_sphere/: celestial_sphere.blend  model.config  model.sdf
models/celestial_sphere/materials/scripts/: repeated.material
models/celestial_sphere/meshes/: celestial_sphere.dae
world/: celestial_sphere.sdf  celestial_sphere.world
